--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,24 @@
 	text-transform: uppercase;
     font-weight: bold;
 }
-.nav-item:hover {
+@media only screen and (min-width: 1200px) {
+   .nav-item{
+       margin-right: 10px;
+   }
+}
+@media only screen and (max-width: 768px) {
+    .nav-item{
+        margin-bottom: 5px;
+    }
+}
+.active {
 	background-color: #808080!important;
     color: #ffffff;
 }
 
-.nav-item:visited {
-    background-color: #808080!important;
-    color: #ffffff;
+.nav-item:hover {
+    background-color: #d3d3d3!important;
+    color: #d3d3d3;
 }
 
 /*End of CSS for Navbar*/
