--- a/css/style.css
+++ b/css/style.css
@@ -145,4 +145,18 @@
     color: #ffffff;
     text-decoration: none;
 }
+/*CSS for Modal*/
+.modal-dialog {
+    position: absolute;
+    top: 150px;
+    right: 100px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    overflow: auto;
+    overflow-y: auto;
+  }
+  .error{
+      color: brown;
+  }
 /*End of CSS*/
